# llm-page-parser

./: .gitignore  LICENSE  README.md  install.sh  parse_local_html.py  pyproject.toml  save_and_parse.py  save_and_parse_arc.py  webpage2llm  webpage_to_llm.py  webpage_to_llm_cookies.py  webpage_to_llm_js.py  webpage_to_llm_safari.py
